--- a/app/src/main/res/layout/activity_registrar_cerda.xml
+++ b/app/src/main/res/layout/activity_registrar_cerda.xml
@@ -15,7 +15,7 @@
             style="@style/EditTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/id_cerda"
+            android:hint="Ingrese el arete"
             android:layout_marginBottom="16dp">
 
             <com.google.android.material.textfield.TextInputEditText
