--- a/app/src/main/res/layout/activity_detalle_cerda.xml
+++ b/app/src/main/res/layout/activity_detalle_cerda.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
@@ -11,12 +12,13 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textDetalle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/text_primary"
-            android:textSize="18sp"
-            android:paddingBottom="16dp"/>
+    android:id="@+id/textDetalle"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:textColor="@color/text_primary"
+    android:textSize="18sp"
+    android:paddingBottom="16dp"
+    tools:text="Fecha de preñez: 15/10/2023\nRepetición de celo: 05/11/2023\nParto estimado: 26/02/2024\nDestete estimado: 19/03/2024"/>
 
         <Button
             android:id="@+id/btnEliminar"
