--- a/app/src/main/res/layout/item_evento.xml
+++ b/app/src/main/res/layout/item_evento.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -21,15 +23,17 @@
             android:id="@+id/txtTipoEvento"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-			android:textColor="@color/text_primary"
+            android:textColor="@color/text_primary"
             android:textSize="16sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            tools:text="PARTO"/>  <!-- Ahora funciona -->
 
         <TextView
             android:id="@+id/txtIdCerda"
             android:layout_width="match_parent"
-			android:textColor="@color/text_primary"
             android:layout_height="wrap_content"
-            android:textSize="14sp"/>
+            android:textColor="@color/text_primary"
+            android:textSize="14sp"
+            tools:text="Arete: CER-001"/>  <!-- Ahora funciona -->
     </LinearLayout>
 </LinearLayout>
