--- a/app/src/main/res/layout/item_evento_detalle.xml
+++ b/app/src/main/res/layout/item_evento_detalle.xml
@@ -14,12 +14,12 @@
         android:textStyle="bold"
         android:textColor="@color/text_primary"/>
 
-    <TextView
-        android:id="@+id/txtIdCerda"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:textColor="@color/text_primary"/>
+   <TextView
+    android:id="@+id/txtIdCerda"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Arete: CER-001" 
+    android:textColor="@color/text_primary"/>
 
     <!-- Eliminado el TextView para fecha del evento -->
     
