--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <!-- Colores para eventos -->
     <color name="prenhez_color">#8E44AD</color>
     <color name="celo_color">#E74C3C</color>
+    <color name="jaulaMaternidad_color">#F39C12</color>
     <color name="parto_color">#27AE60</color>
     <color name="destete_color">#2980B9</color>
 
@@ -29,6 +30,8 @@
     <color name="button_danger">#E74C3C</color>   <!-- Rojo para acciones peligrosas -->
     <color name="button_success">#27AE60</color>  <!-- Verde para acciones positivas -->
     <color name="button_warning">#F39C12</color> <!-- Amarillo/naranja para advertencias -->
+
+    <color name="event_dot_color">#2E4086</color> <!-- Color gris -->
 
 
 </resources>
